Server: Implement Collection Set Allocation Endpoints
